setup/development-namespace.yaml
# Creates a namespace
apiVersion: v1
kind: Namespace
metadata:
  name:  development
  "labels": {
      "name": development
    }
