setup/spring-boot-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: spring-boot
  namespace: development
  labels:
    app: spring-boot
spec:
  replicas: 2
  template:
    metadata:
      namespace: development
      labels:
        run: spring-boot
    spec:
      containers:
      - name: spring-boot
        image: kubelab/spring-boot:latest
        ports:
        - containerPort: 80
