setup/spring-boot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot
  namespace: development
  labels:
    run: spring-boot
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: spring-boot
