setup/spring-boot-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spring-boot
  namespace: development
  labels:
    run: spring-boot
spec:
  backend:
    serviceName: spring-boot
    servicePort: 80
